# nfx-serialization

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build-windows-mingw.yml  build-windows-msvc.yml  codeql.yml  documentation.yml  release.yml
benchmark/: BM_JSONAccess.cpp  BM_JSONIteration.cpp  BM_JSONModification.cpp  BM_JSONParsing.cpp  BM_JSONSchemaGeneration.cpp  BM_JSONSchemaValidation.cpp  BM_JSONSerialization.cpp  BM_JsonAccess.cpp  BM_JsonExtensionTypes.cpp  BM_JsonIteration.cpp  BM_JsonModification.cpp  BM_JsonObjectSerialization.cpp  BM_JsonParsing.cpp  BM_JsonSchemaGeneration.cpp  BM_JsonSchemaValidation.cpp  BM_JsonSerialization.cpp  BM_JsonSerializerBuilder.cpp  CMakeLists.txt  README.md
benchmark/extensions/: BM_JsonExtensionsSerialization.cpp
cmake/: nfx-serialization-config.cmake.in  nfxSerializationBuildConfig.cmake  nfxSerializationDependencies.cmake  nfxSerializationExtensions.cmake  nfxSerializationInstall.cmake  nfxSerializationPackaging.cmake  nfxSerializationSources.cmake  nfxSerializationTargets.cmake  nfxSerializationVersion.rc.in
doc/: CMakeLists.txt
include/nfx/: Serialization.h
include/nfx/detail/serialization/json/: Regex.h  SerializableDocument.inl  Serializer.inl  Types.h  Vocabulary.h
include/nfx/serialization/json/: BuilderTraits.h  Concepts.h  Document.h  SchemaGenerator.h  SchemaValidator.h  SerializableDocument.h  SerializationTraits.h  Serializer.h
include/nfx/serialization/json/extensions/: ContainersTraits.h  DatatypesTraits.h  DateTimeTraits.h
include/nfx/serialization/json/traits/: BuilderTraits.h  DocumentTraits.h  SerializationTraits.h
samples/: CMakeLists.txt  README.md  Sample_JSONArrayIterator.cpp  Sample_JSONDocument.cpp  Sample_JSONObjectFieldIterator.cpp  Sample_JSONPathView.cpp  Sample_JSONPointer.cpp  Sample_JSONSchemaGenerator.cpp  Sample_JSONSchemaValidator.cpp  Sample_JSONSerializer.cpp  Sample_JsonArrayIterator.cpp  Sample_JsonDocument.cpp  Sample_JsonObjectFieldIterator.cpp  Sample_JsonPathView.cpp  Sample_JsonPointer.cpp  Sample_JsonSchemaGenerator.cpp  Sample_JsonSchemaValidator.cpp  Sample_JsonSerializationBasics.cpp  Sample_JsonSerializationContainers.cpp  Sample_JsonSerializationStlContainers.cpp  Sample_JsonSerializationTraits.cpp  Sample_JsonSerializer.cpp  Sample_JsonSerializerWithBuilder.cpp
samples/extensions/: Sample_JsonSerializationNfxTypes.cpp
src/json/: Document.cpp  SchemaGenerator.cpp  SchemaValidator.cpp
src/json/impl/: Document_impl.cpp  Document_impl.h  SchemaValidator_impl.cpp  SchemaValidator_impl.h
test/: CMakeLists.txt  TESTS_Extensions.cpp  TESTS_JSONArrayIterator.cpp  TESTS_JSONArrays.cpp  TESTS_JSONDocument.cpp  TESTS_JSONExtensions.cpp  TESTS_JSONFileLoading.cpp  TESTS_JSONFormats.cpp  TESTS_JSONObjectFieldIterator.cpp  TESTS_JSONObjects.cpp  TESTS_JSONPathView.cpp  TESTS_JSONSchemaGenerator.cpp  TESTS_JSONSchemaValidator.cpp  TESTS_JSONSerializer.cpp  TESTS_JsonArrayIterator.cpp  TESTS_JsonArrays.cpp  TESTS_JsonDocument.cpp  TESTS_JsonExtensions.cpp  TESTS_JsonFileLoading.cpp  TESTS_JsonFormats.cpp  TESTS_JsonObjectFieldIterator.cpp  TESTS_JsonObjects.cpp  TESTS_JsonPathView.cpp  TESTS_JsonSchemaGenerator.cpp  TESTS_JsonSchemaValidator.cpp  TESTS_JsonSerializer.cpp  Tests_JsonArrayIterator.cpp  Tests_JsonArrays.cpp  Tests_JsonDocument.cpp  Tests_JsonExtensions.cpp  Tests_JsonFileLoading.cpp  Tests_JsonFormats.cpp  Tests_JsonObjectFieldIterator.cpp  Tests_JsonObjects.cpp  Tests_JsonPathView.cpp  Tests_JsonSchemaGenerator.cpp  Tests_JsonSchemaValidator.cpp  Tests_JsonSerializer.cpp  Tests_JsonSerializerBuilder.cpp
testdata/: deeply_nested.json  invalid.json  large_array.json  large_object.json  medium_object.json  mixed_types.json  small_array.json  small_object.json
